fix wrong name for sam install.

--- a/cpu-only/Dockerfile
+++ b/cpu-only/Dockerfile
@@ -10,6 +10,6 @@ RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2
 
 # install AWS SAM CLI
 RUN wget https://github.com/aws/aws-sam-cli/releases/latest/download/aws-sam-cli-linux-x86_64.zip && \
-    unzip aws-sam-cli-linux-x86_64.zip && \
-    ./aws-sam-cli/install && \
-    rm -rf aws-sam-cli-linux-x86_64.zip
+    unzip aws-sam-cli-linux-x86_64.zip -d sam-installation && \
+    ./sam-installation/install && \
+    rm -rf aws-sam-cli-linux-x86_64.zip sam-installation
